--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,22 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+
+# python stuff
+__pycache__/
+*.py[cod]
+*$py.class
+.venv/
+# distribution / packaging
+.Python
+build/
+develop-eggs/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+
